--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -9,7 +9,7 @@
       <h3 class="mb-5">
         <em>A Matchmaking Service for Lipscomb Students</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="/bisonMatch/quiz/">Find your matches!</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find your matches!</a>
     </div>
     <div class="overlay"></div>
   </header>
