--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -99,7 +99,7 @@
       <!-- Actual quiz 'form' -->
       <!--=============================================================================================================-->
 
-      <div class="col-lg-6 col-md-8 col-sm-10 col-10" id="questions-container">
+      <div class="col-lg-6 col-md-8 col-sm-10 col-10" id="questions-container" style="display: none;">
 
         <div class="form-container active">
           <h2 class="text-center">Question 1</h2>
