--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -9,7 +9,7 @@
       <h3 class="mb-5">
         <em>A Matchmaking Service for Lipscomb Students</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find your matches!</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger disabled" href="/bisonMatch/quiz/">Take The Quiz</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -53,7 +53,7 @@
           <div class="col-md-4 col-sm-12">
           <i class="fas fa-pen fa-3x"></i><br><br>
            <p class="lead mb-5">
-              Take the (free!) quiz to determine compatibility.
+              Take the <strong>FREE</strong> quiz to determine compatibility.
               </p>
 
           </div>
@@ -63,7 +63,7 @@
 
               <i class="far fa-credit-card fa-3x "></i> <br><br>
                 <p class="lead mb-5">
-                Four days before Valentine's Day we will release the results. Pay the $3 online through our (new!) payment
+                The week of Valentine's Day we will release the results. Pay the $3 online through our <strong>NEW</strong> payment
                 system, or find us at a table in the Student Center to get your results!
               </p>
 
@@ -80,7 +80,7 @@
            All proceeds will go to raising funds for LU's ACM student chapter.
            </p>
 
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/quiz/">Take the Quiz</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger disabled" href="/bisonMatch/quiz/">Get Your Results</a>
         </div>
       </div>
     </div>
