--- a/bisonMatchApp/templates/bisonMatchApp/about.html
+++ b/bisonMatchApp/templates/bisonMatchApp/about.html
@@ -51,7 +51,7 @@
                         <div class="col-lg">
                           <p class="lead mb-5">We added the fun feature of uploading your picture so that 
                           potential matches could see you before they decide to 'take the plunge' and ask you on a date.
-                          We also added more free-form general questions (what is your ideal date?) etc and new ways for 
+                          We also added more free-form general questions (what is your ideal date?) etc. and new ways for 
                           you to pay.</p>
                         </div>
                       </div>
@@ -73,12 +73,12 @@
                       <div class="col-lg-12 mx-auto">
                     <div class="row">
                         <div class="col-lg border-right">
-                          <h2>Can we ask you a question?</h2>
+                          <h2>Can we ask <em>you</em> a question?</h2>
                         </div>
 
                         <div class="col-lg">
-                          <p class="lead mb-5">Yes, you can't deny us. Send us any funny/ interesting dates that come out 
-                          of this. We LOVE reading your responses and will put up any interesting ones (with names blurred out) on our instagram.
+                          <p class="lead mb-5">Yes. We can't deny you. Can you send us any funny/ interesting dates that come out 
+                          of this? We LOVE reading your responses and will put up any interesting ones (with names blurred out) on our instagram.
 
                           </p>
                         </div>
@@ -92,7 +92,7 @@
                         </div>
 
                         <div class="col-lg">
-                          <p class="lead mb-5">If you have ANY problems, questions, concerns, future improvements PLEASE email us at 
+                          <p class="lead mb-5">If you have ANY problems, questions, concerns, or future improvements PLEASE email us at 
                           <a href="mail-to:bisonmatch@lipscomb.edu">bisonmatch@lipscomb.edu</a> or send us a direct message on instagram @bisonmatch.
                           We would love to hear from you.
                           </p>
