--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -157,21 +157,21 @@
         <div class="form-container">
            <h2 class="text-center">Question 2</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+          <img src={% static "bisonMatchApp/img/kids.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center"> Here's a hard hitting question. <em> Ideally</em>, your preferred number of children would be:</h4>
 
           <div class="box">
             <input type="radio" id="radio5" value="0" name="question2" required/>
-            <label for="radio5">Parakeet</label>
+            <label for="radio5">None.</label>
 
             <input type="radio" id="radio6" value="1" name="question2"/>
-            <label for="radio6">Moose</label>
+            <label for="radio6">One or two.</label>
 
             <input type="radio" id="radio7" value="2" name="question2"/>
-            <label for="radio7">Dog</label>
+            <label for="radio7">Three to four.</label>
 
             <input type="radio" id="radio8" value="3" name="question2"/>
-            <label for="radio8">Cat</label>
+            <label for="radio8">Five or more.</label>
           </div>
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
           <div class="float-right"><a class="btn btn-primary medium-btn" onclick="next_question()">Next</a></div>
@@ -182,8 +182,8 @@
         <div class="form-container">
            <h2 class="text-center">Question 3</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center"> On a typical Saturday, you’ll find me:</h4>
+          <img src={% static "bisonMatchApp/img/saturday.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center">On a typical Saturday, you’ll find me:</h4>
 
           <div class="box">
             <input type="radio" id="radio9" value="0" name="question3" required/>
@@ -193,10 +193,10 @@
             <label for="radio10">Any kind of physical activity. Hiking anyone?</label>
 
             <input type="radio" id="radio11" value="2" name="question3"/>
-            <label for="radio11">TODO</label>
+            <label for="radio11">Playing video games or watching TV shows. Staying inside is my kind of fun.</label>
 
             <input type="radio" id="radio12" value="3" name="question3"/>
-            <label for="radio12">TODO</label>
+            <label for="radio12">Doing something social. Nashville always has something going on.</label>
 
           </div>
 
@@ -209,7 +209,7 @@
         <div class="form-container">
            <h2 class="text-center">Question 4</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+          <img src={% static "bisonMatchApp/img/scary.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
            <h4 class="text-center"> When it comes to scary movies: </h4>
 
           <div class="box">
@@ -234,21 +234,21 @@
 
         <div class="form-container">
            <h2 class="text-center">Question 5</h2>
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+          <img src={% static "bisonMatchApp/img/social_media.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center">If you could describe yourself as a social media site, what would it be?</h4>
 
           <div class="box">
             <input type="radio" id="radio18" value="0" name="question5" required/>
-            <label for="radio18">Very Likely</label>
+            <label for="radio18">Facebook. Reliable, down to earth, and friends with your grandma.</label>
 
             <input type="radio" id="radio19" value="1" name="question5"/>
-            <label for="radio19">Somewhat Likely</label>
+            <label for="radio19">Instagram. Trendy, funny, and know all the right angles for a good picture.</label>
 
             <input type="radio" id="radio20" value="2" name="question5"/>
-            <label for="radio20">Neutral</label>
+            <label for="radio20">Pinterest. Artsy, goal setting, and full of aesthetic.</label>
 
             <input type="radio" id="radio21" value="3" name="question5"/>
-            <label for="radio21">Somewhat Unlikely</label>
+            <label for="radio21">Reddit. Introverted, sarcastic, and full of cat memes.</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
@@ -285,21 +285,21 @@
         <div class="form-container">
            <h2 class="text-center">Question 7</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">TODO:You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+          <img src={% static "bisonMatchApp/img/annoying.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center">Which of these habits do you think are the most annoying that some couples have?</h4>
 
           <div class="box">
             <input type="radio" id="radio26" value="0" name="question7" required/>
-            <label for="radio26">Very Likely</label>
+            <label for="radio26">Excessive PDA</label>
 
             <input type="radio" id="radio27" value="1" name="question7"/>
-            <label for="radio27">Somewhat Likely</label>
+            <label for="radio27">All that “We” talk.</label>
 
             <input type="radio" id="radio28" value="2" name="question7"/>
-            <label for="radio28">Neutral</label>
+            <label for="radio28">Ridiculous love posts on social media.</label>
 
             <input type="radio" id="radio29" value="3" name="question7"/>
-            <label for="radio29">Somewhat Unlikely</label>
+            <label for="radio29">Overuse of pet names.</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
@@ -337,7 +337,7 @@
         <div class="form-container">
           <h2 class="text-center">Question 9</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+          <img src={% static "bisonMatchApp/img/smartphone.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
            <h4 class="text-center">The newest smartphone just came out. You:</h4>
 
           <div class="box">
@@ -363,21 +363,21 @@
         <div class="form-container">
            <h2 class="text-center">Question 10</h2>
 
-          <img src={% static "bisonMatchApp/img/date.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
-           <h4 class="text-center">You’re on a first date. Everything is going fine, except that _________, which is really bothersome.</h4>
+          <img src={% static "bisonMatchApp/img/trouble.gif" %} class="img-fluid quiz-img rounded mx-auto d-block" alt="Responsive image">
+           <h4 class="text-center">Who is the first person you call when you’re in trouble?</h4>
 
           <div class="box">
             <input type="radio" id="radio38" value="0" name="question10" required/>
-            <label for="radio38">Math</label>
+            <label for="radio38">My parent(s). They'll love me no matter what I do.</label>
 
             <input type="radio" id="radio39" value="1" name="question10"/>
-            <label for="radio39">Science</label>
+            <label for="radio39">A sibling. If I'm in trouble, they can find a way.</label>
 
             <input type="radio" id="radio40" value="2" name="question10"/>
-            <label for="radio40">Art</label>
+            <label for="radio40">A friend. They can bring me ice cream and comforting words.</label>
 
             <input type="radio" id="radio41" value="3" name="question10"/>
-            <label for="radio41">Reading</label>
+            <label for="radio41">A mentor. The wisdom of our elders is always best.</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
