change to unpaid match page add deadline and pay link

--- a/bisonMatchApp/templates/bisonMatchApp/matches.html
+++ b/bisonMatchApp/templates/bisonMatchApp/matches.html
@@ -46,7 +46,8 @@
           </div>
 
           <h4 class="instructions">Oops!</h4>
-          <p>Looks like you haven't paid. We can't show you your matches until you do. The deadline is ...</p>
+          <p>Looks like you haven't paid. We can't show you your matches until you do.
+            <a href="../../thanks">Click here to buy your results.</a> The deadline is February 14.</p>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1 col-1"></div>
