remove cat from memes

--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -237,7 +237,7 @@
             <label for="radio20">Pinterest. Artsy, goal setting, and full of aesthetic.</label>
 
             <input type="radio" id="radio21" value="3" name="question5"/>
-            <label for="radio21">Reddit. Introverted, sarcastic, and full of cat memes.</label>
+            <label for="radio21">Reddit. Introverted, sarcastic, and full of memes.</label>
           </div>
 
           <div class="float-left"><a class="btn btn-primary medium-btn" onclick="previous_question()">Previous</a></div>
