--- a/bisonMatchApp/templates/bisonMatchApp/about.html
+++ b/bisonMatchApp/templates/bisonMatchApp/about.html
@@ -19,7 +19,7 @@
           </div>
 
           <div class="col-lg">
-            <p class="lead mb-5">We went out of our way to add the cheeese. Don't take it too seriously.</p>
+            <p class="lead mb-5">We went out of our way to add the cheese. Don't take it too seriously.</p>
           </div>
         </div>
       </div>
@@ -71,56 +71,52 @@
       </div>
 
       <div class="col-lg-12 mx-auto">
-        <div class="row">
-          <div class="col-lg border-right">
-            <h2>Can we ask <em>you</em> a question?</h2>
-          </div>
-
-          <div class="col-lg">
-            <p class="lead mb-5">Yes. We can't deny you. Can you send us any funny/ interesting dates that come out
-              of this? We LOVE reading your responses and will put up any interesting ones (with names blurred out) on
-              our instagram.
-
-            </p>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-lg-12 mx-auto">
-        <div class="row">
-          <div class="col-lg border-right">
-            <h2>I'm having troubles with the quiz. Who can I contact?</h2>
-          </div>
-
-          <div class="col-lg">
-            <p class="lead mb-5">If you have ANY problems, questions, concerns, or future improvements PLEASE email us
-              at
-              <a href="mail-to:bisonmatch@lipscomb.edu">bisonmatch@lipscomb.edu</a> or send us a direct message on
-              instagram @bisonmatch.
-              We would love to hear from you.
-            </p>
+          <div class="row">
+            <div class="col-lg border-right">
+              <h2>I'm having troubles with the quiz. Who can I contact?</h2>
+            </div>
+  
+            <div class="col-lg">
+              <p class="lead mb-5">If you have ANY problems, questions, concerns, or future improvements PLEASE email us
+                at
+                <a href="mail-to:bisonmatch@lipscomb.edu">bisonmatch@lipscomb.edu</a> or send us a direct message on
+                instagram @bisonmatch.
+                We would love to hear from you.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
       <div class="col-lg-12 mx-auto">
-
           <div class="row">
             <div class="col-lg border-right">
               <h2>What is ACM?</h2>
             </div>
-  
             <div class="col-lg">
               <p class="lead mb-5">ACM stands for Association for Computing Machinery. To learn more about ACM 
                 <a href="acm.org/about-acm/about-the-acm-organization">click here.</a>
               </p>
             </div>
           </div>
-  
         </div>
-
     </div>
 
+    <div class="col-lg-12 mx-auto">
+        <div class="row">
+          <div class="col-lg border-right">
+            <h2> We have a question for you!</h2>
+          </div>
+
+          <div class="col-lg">
+            <p class="lead mb-5">Can you send us any funny/ interesting dates that come out
+              of this? We LOVE reading your responses and will put up any interesting ones (with names blurred out) on
+              our instagram, or tag us in your posts @bisonmatch. Don't forget to add #bisonmatch!
+
+            </p>
+          </div>
+        </div>
+
+      </div>
 
     <p class="lead mb-5 pad-me">
       All proceeds will go to raising funds for LU's ACM student chapter.
