final push of files downloaded from server.

--- a/bisonMatchApp/templates/bisonMatchApp/index.html
+++ b/bisonMatchApp/templates/bisonMatchApp/index.html
@@ -9,7 +9,7 @@
       <h3 class="mb-5">
         <em>A Matchmaking Service for Lipscomb Students</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="/bisonMatch/quiz/">Take The Quiz</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger disabled" href="/bisonMatch/quiz/">Take The Quiz</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -80,7 +80,7 @@
            All proceeds will go to raising funds for LU's ACM student chapter.
            </p>
 
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/quiz/">Get Your Results</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="/bisonMatch/thanks/">Get Your Results</a>
         </div>
       </div>
     </div>
