--- a/bisonMatchApp/templates/bisonMatchApp/paid_results_email.html
+++ b/bisonMatchApp/templates/bisonMatchApp/paid_results_email.html
@@ -17,7 +17,7 @@
     <p>
         Hi {{name}}, <br><br>
         Thank you for supporting your local ACM chapter by buying your results! <br>
-        <a href="bisonmatch.info/bisonMatch/matches/lnumber/{{lnumber}}">Click here</a> 
+        <a href="http://157.230.208.45:8001/bisonMatch/matches/{{lnumber}}/"">Click here</a> 
         to view your BisonMatch results! <br>
         Happy Valentine's Day!<br><br>
         Much Love, <br>
