--- a/bisonMatchApp/templates/bisonMatchApp/unpaid_results_email.html
+++ b/bisonMatchApp/templates/bisonMatchApp/unpaid_results_email.html
@@ -17,8 +17,8 @@
     <p>
         Hi {{name}}, <br><br>
         It's not too late for you to view your results! <br>
-        <a href="bisonmatch.info/bisonMatch/thanks">Click here</a> to buy your results online.<br>
-        Once you have paid, <a href="bisonmatch.info/bisonMatch/matches/lnumber/{{lnumber}}">click here</a>
+        <a href="http://157.230.208.45:8001/bisonMatch/thanks/">Click here</a> to buy your results online.<br>
+        Once you have paid, <a href="http://157.230.208.45:8001/bisonMatch/matches/{{lnumber}}/">click here</a>
         to view your BisonMatch results! <br>
         Happy Valentine's Day!<br><br>
         Much Love,<br>
