--- a/bisonMatchApp/templates/bisonMatchApp/quiz.html
+++ b/bisonMatchApp/templates/bisonMatchApp/quiz.html
@@ -6,6 +6,7 @@
     <div id="croppie"></div>
 
     <a id="submit-crop" class="btn btn-primary medium-button">Submit Crop</a>
+ 
   </div>
 
 
@@ -46,7 +47,7 @@
       <!-- User information 'form' -->
       <!--=============================================================================================================-->
 
-      <div class="col-lg-8 col-md-8 col-sm-10 col-11 card card-margin-me card-pad-me mx-auto" id="profile-info-form">
+      <div class="col-lg-6 col-md-8 col-sm-12 col-12 card card-margin-me card-pad-me" id="profile-info-form">
   <h2 class="text-center margin-me"> But first, let's get some info about you </h2>
     <div class="form-group">
     <label for="Name:" class="label-bold not-radio">*Name:</label>
@@ -56,11 +57,11 @@
   <div class="form-group">
     <label for="Email Address:" class="label-bold not-radio">Email address:</label>
     <input type="text" class="form-control" id="exampleInputEmail1" name="email" placeholder="Enter email" required>
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1" class="label-bold not-radio">LNumber:</label>
     <input type="text" class="form-control" name="l-number" id="exampleInputPassword1" placeholder="Enter your LNumber">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your LNumber with anyone else.</small>
   </div>
     <div class="form-group">
     <label for="exampleInputPassword1" class="label-bold not-radio">Major:</label>
