--- a/bisonMatchApp/templates/bisonMatchApp/thanks.html
+++ b/bisonMatchApp/templates/bisonMatchApp/thanks.html
@@ -25,18 +25,19 @@
               <i class="far fa-credit-card fa-3x "></i> <br><br>
               <p class="lead mb-5">Pay Online <br></p>
 
-                <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top" onsubmit="return checkInput();" name="form">
-                  {% csrf_token %}
-                  <input type="hidden" name="cmd" value="_s-xclick">
-                  <input type="hidden" name="hosted_button_id" value="Q7URVTBNRG6VY">
-                  <input type="text" name="invoice" value="" placeholder="Enter your LNumber"> <br><br>
-                  <input type="image" src="http://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-
+                Quiz is over, come back next year! <br>
+                <!-- <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="VEZHPMGCPMEC4">
+                        <input type="text" placeholder="Enter your LNumber..." name="invoice" value=""><br><br>
+                        <input type="image" src="http://www.paypalobjects.com/webstatic/en_US/i/buttons/checkout-logo-large.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form> -->
                 <br>
                 <p> **NOTE: You can use paypal, <strong>OR</strong> use the guest checkout to pay with your credit/debit card. You can always navigate back to this 
                 page if you decide to pay later.
+                <p> We also have a Venmo! @Lipscomb-ACM </p>
+
             </div>
 
               <div class="col-md-6 col-sm-12">
