--- a/bisonMatchApp/templates/bisonMatchApp/unpaid_remind_email.html
+++ b/bisonMatchApp/templates/bisonMatchApp/unpaid_remind_email.html
@@ -17,7 +17,7 @@
     <p>
         Hi {{name}}, <br><br>
         It's not too late to buy your results for Bison Match!<br>
-        <a href="bisonmatch.info/bisonMatch/thanks">Click here</a> to pay online,<br>
+        <a href="http://157.230.208.45:8001/bisonMatch/thanks/">Click here</a> to pay online,<br>
         or stop by the Bison Match table in the Student Center to buy your results.<br>
         Once you've paid, you will receive your results via email on Monday February 11,<br>
         just in time to find a Valentine's Date!<br>
